syntax = "proto3";

package legion.common.v1;

option csharp_namespace = "Legion.Common.V1";

// -------------------- Identity --------------------

message ServiceId {
  string value = 1; // UUID/string
}

message ServiceKey {
  string name = 1;     // eg. "registry", "metrics"
  string version = 2;  // eg. "1.0.0"
}

message Endpoint {
  string address = 1; // eg. "127.0.0.1:50051"
  bool tls = 2;       // this is going to be used later...
}

message ServiceMetadata {
  string display_name = 1;
  repeated string tags = 2;
  map<string, string> labels = 3;
}

message ServiceInstance {
  ServiceId id = 1;
  ServiceKey key = 2;
  Endpoint endpoint = 3;
  ServiceMetadata metadata = 4;

  int64 registered_at_ms = 5;
  int64 last_seen_at_ms = 6;
}

enum ServiceStatus {
  SERVICE_STATUS_UNSPECIFIED = 0;
  SERVICE_STATUS_UNKNOWN = 1;
  SERVICE_STATUS_HEALTHY = 2;
  SERVICE_STATUS_DEGRADED = 3;
  SERVICE_STATUS_UNHEALTHY = 4;
  SERVICE_STATUS_DEAD = 5;
}

// -------------------- Standard Result/Error --------------------

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_INVALID_ARGUMENT = 1;
  ERROR_CODE_NOT_FOUND = 2;
  ERROR_CODE_ALREADY_EXISTS = 3;
  ERROR_CODE_CONFLICT = 4;
  ERROR_CODE_UNAVAILABLE = 5;
  ERROR_CODE_TIMEOUT = 6;
  ERROR_CODE_INTERNAL = 7;

  // Legion specific
  ERROR_CODE_NOT_REGISTERED = 50;
  ERROR_CODE_INSTANCE_DEAD = 51;
}

message Error {
  ErrorCode code = 1;
  string message = 2;
  map<string, string> details = 3;
}

message Empty {}

message Result {
  oneof outcome {
    Empty ok = 1;
    Error error = 2;
  }
}

// -------------------- Paging (Useful early on) --------------------

message PageRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message PageResponse {
  string next_page_token = 1;
}